import 'package:flutter/material.dart';

class AppColors {
  static const Color headerColor = Colors.black;
  static const Color bodyColor = Color(0xff141414);
  static const Color borderColor = Color(0xff777777);
  static const Color primaryTextColor = Color(0xffffffff);
  static const Color secondaryTextColor = Color(0xffACACAC);
  static const Color accentColor = Color(0xffC76020);
  static const Color baseCardColor = Color(0xff272727);
  static const Color todayCardColor = Color(0xff3B1E00);
  static const Color deadCardColor = Color(0xff380000);
}
