class AppStrings {
  static const String error = "Ошибка";

  static const String appTitle = "Задачник";

  static const String toDo = "Сделать";

  static const String doing = "Делаю";

  static const String done = "Сделано";

  static const String emptyNotesList = "Записи отсутствуют";

  static const String newNote = "Новая запись";

  static const String createNote = "Создать";

  static const String finishTask = "Завершить";

  static const String startDoingTask = "Начать";

  static const String updateTask = "Изменить";

  static const String deleteTask = "Удалить";

  static const String title = "Заголовок";

  static const String description = "Описание";

  static const String deadline = "Дедлайн";
}